Changed a few stuff. Manage to get textbox clearing done before ShowQueuedMessages runs.
git-svn-id: svn://localhost/monitorsystem/trunk@52 e930bcc6-d1a7-0410-987c-80e4610ab126

--- a/MonitorSystem/MonitorSystem.csproj
+++ b/MonitorSystem/MonitorSystem.csproj
@@ -57,10 +57,11 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>A26C44482C0F15C2048DBE60CF41865723AF18A5</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>F12DC744EE8A9F3E5F166925FB862ABE1BBF6A00</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>MonitorSystem_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>
+    </ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
