Basically added syntax highlighting for mssql (*.sql files). This makes use of ScintillaNET and currently requires the ScintillaNet.dll files to be in one of the Environment Variable paths of windows.
git-svn-id: svn://localhost/monitorsystem/trunk@60 e930bcc6-d1a7-0410-987c-80e4610ab126

--- a/MonitorSystem/MonitorSystem.csproj
+++ b/MonitorSystem/MonitorSystem.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>MonitorSystem</RootNamespace>
     <AssemblyName>MonitorSystem</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>C:\Francois\Dev\Published\Microsoft Visual 2010\NetworkAndBackupFiles\MonitorSystem\</PublishUrl>
@@ -91,6 +92,9 @@
     <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\SharedClasses\DLLs\Microsoft.WindowsAPICodePack.dll</HintPath>
+    </Reference>
+    <Reference Include="ScintillaNet">
+      <HintPath>..\..\..\..\..\..\..\Francois\Other\DLLs\ScintillaNET\ScintillaNet.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -224,6 +228,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="TestAnimations.resx">
       <DependentUpon>TestAnimations.cs</DependentUpon>
@@ -234,6 +239,7 @@
     <EmbeddedResource Include="ViewBackups.resx">
       <DependentUpon>ViewBackups.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
