Wow the autocomplete works great for MonitoredFilesChanged. Also renamed the previous textbox.. to richTextBox_Description for ViewBackups and MonitoredFilesChanged.
git-svn-id: svn://localhost/monitorsystem/trunk@67 e930bcc6-d1a7-0410-987c-80e4610ab126

--- a/MonitorSystem/MonitorSystem.csproj
+++ b/MonitorSystem/MonitorSystem.csproj
@@ -117,6 +117,9 @@
     <Compile Include="..\..\SharedClasses\ApplicationRecoveryAndRestart.cs">
       <Link>ApplicationRecoveryAndRestart.cs</Link>
     </Compile>
+    <Compile Include="..\..\SharedClasses\AutoCompleteInterop.cs">
+      <Link>AutoCompleteInterop.cs</Link>
+    </Compile>
     <Compile Include="..\..\SharedClasses\CustomBalloonTip.cs">
       <Link>CustomBalloonTip.cs</Link>
       <SubType>Form</SubType>
