Not much changed.
git-svn-id: svn://localhost/monitorsystem/trunk@69 e930bcc6-d1a7-0410-987c-80e4610ab126

--- a/MonitorSystem/MonitorSystem.csproj
+++ b/MonitorSystem/MonitorSystem.csproj
@@ -234,6 +234,9 @@
     <EmbeddedResource Include="AddTodoItem.resx">
       <DependentUpon>AddTodoItem.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MonitoredFilesChanged.resx">
       <DependentUpon>MonitoredFilesChanged.cs</DependentUpon>
     </EmbeddedResource>
