--- a/MonitorSystem/MonitorSystem.csproj
+++ b/MonitorSystem/MonitorSystem.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MonitorSystem</RootNamespace>
     <AssemblyName>MonitorSystem</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -44,6 +44,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>true</UseVSHostingProcess>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -53,6 +54,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>app.ico</ApplicationIcon>
@@ -78,6 +80,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
+    <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -86,6 +90,7 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
@@ -141,11 +146,17 @@
     <Compile Include="..\..\SharedClasses\MouseHooks.cs">
       <Link>MouseHooks.cs</Link>
     </Compile>
+    <Compile Include="..\..\SharedClasses\NetworkInterop.cs">
+      <Link>NetworkInterop.cs</Link>
+    </Compile>
     <Compile Include="..\..\SharedClasses\PhpInterop.cs">
       <Link>PhpInterop.cs</Link>
     </Compile>
     <Compile Include="..\..\SharedClasses\QueueingActionsInterop.cs">
       <Link>QueueingActionsInterop.cs</Link>
+    </Compile>
+    <Compile Include="..\..\SharedClasses\SerializationInterop.cs">
+      <Link>SerializationInterop.cs</Link>
     </Compile>
     <Compile Include="..\..\SharedClasses\SettingsInterop.cs">
       <Link>SettingsInterop.cs</Link>
@@ -215,6 +226,12 @@
     <Compile Include="TestSpeech.Designer.cs">
       <DependentUpon>TestSpeech.cs</DependentUpon>
     </Compile>
+    <Compile Include="TransferDropWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TransferDropWindow.Designer.cs">
+      <DependentUpon>TransferDropWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewBackups.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -255,6 +272,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TestSpeech.resx">
       <DependentUpon>TestSpeech.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TransferDropWindow.resx">
+      <DependentUpon>TransferDropWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewBackups.resx">
       <DependentUpon>ViewBackups.cs</DependentUpon>
@@ -301,6 +321,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SharedClasses\NetworkInteropSerializedClasses\NetworkInteropSerializedClasses.csproj">
+      <Project>{7b476aa3-570a-48fd-80ec-53395e170080}</Project>
+      <Name>NetworkInteropSerializedClasses</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
