--- a/MonitorSystem/MonitorSystem.csproj
+++ b/MonitorSystem/MonitorSystem.csproj
@@ -209,6 +209,14 @@
       <Link>MiniDownloadBarForm.designer.cs</Link>
       <DependentUpon>MiniDownloadBarForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\..\SharedClasses\MiniIndeterminateProgress.cs">
+      <Link>MiniIndeterminateProgress.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\..\SharedClasses\MiniIndeterminateProgress.designer.cs">
+      <Link>MiniIndeterminateProgress.designer.cs</Link>
+      <DependentUpon>MiniIndeterminateProgress.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\..\SharedClasses\MouseHooks.cs">
       <Link>MouseHooks.cs</Link>
     </Compile>
@@ -341,6 +349,10 @@
     <EmbeddedResource Include="..\..\SharedClasses\MiniDownloadBarForm.resx">
       <Link>MiniDownloadBarForm.resx</Link>
       <DependentUpon>MiniDownloadBarForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\SharedClasses\MiniIndeterminateProgress.resx">
+      <Link>MiniIndeterminateProgress.resx</Link>
+      <DependentUpon>MiniIndeterminateProgress.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="..\..\SharedClasses\UserMessageBox.resx">
       <Link>UserMessageBox.resx</Link>
