refs #1: Some refactoring.
git-svn-id: svn://localhost/monitorsystem/trunk@123 e930bcc6-d1a7-0410-987c-80e4610ab126

--- a/MonitorSystem/MonitorSystem.csproj
+++ b/MonitorSystem/MonitorSystem.csproj
@@ -193,6 +193,9 @@
     <Compile Include="..\..\SharedClasses\FileSystemInterop.cs">
       <Link>FileSystemInterop.cs</Link>
     </Compile>
+    <Compile Include="..\..\SharedClasses\FirepumaInterop.cs">
+      <Link>FirepumaInterop.cs</Link>
+    </Compile>
     <Compile Include="..\..\SharedClasses\Generics.cs">
       <Link>Generics.cs</Link>
     </Compile>
